Bug 170337 - An outer table has too small height on the last page of a document
Summary: An outer table has too small height on the last page of a document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords:
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2026-01-14 07:44 UTC by Mike Kaganski
Modified: 2026-01-18 19:00 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A testdoc from testFloattableBadFlyPos (18.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2026-01-14 07:44 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2026-01-14 07:44:26 UTC
Created attachment 205042 [details]
A testdoc from testFloattableBadFlyPos

The attachment is from testFloattableBadFlyPos (see sw/qa/core/text/frmform.cxx).
Open the document in Word, and check the last (4th) page. It has an outer table, and an inner floating table; the outer table expands vertically to fully enclose the inner table.

Open it in Writer. The last page's outer table is short, and the inner table overlaps and extends below the outer table’s bottom border.
Comment 1 Mike Kaganski 2026-01-14 07:54:57 UTC
https://gerrit.libreoffice.org/c/core/+/197240
Comment 2 Commit Notification 2026-01-14 09:24:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/244a0c2f7b2ef79251860f9b4e5381a49f03de55

tdf#170337: find the correct master containing the anchored objects

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-15 07:59:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/711979dff99fb1557bd1e8201135dc587eadd665

tdf#170337: find the correct master containing the anchored objects

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.