tdf#170337: find the correct master containing the anchored objects

Was this way since commit f66ac0bacb9a57228dfd3b24b347b985376b63df
(INTEGRATION: CWS swqbugfixes09 (1.67.38); FILE MERGED, 2004-11-16).

Change-Id: I7feeeb2d77849ef626b6ed7ce6385c10cae02c6e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197240
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197251